# axum_postgres

./: .env  Cargo.toml
src/: main.rs
