[package]
name = "axum_postgres"
version = "0.1.0"
edition = "2021"

[dependencies]

#server
axum = "0.7.4"
tokio = { version = "1.36.3", features = ["full"] }
#Validade queries
sqlx = { version = "0.7.3" , features = ["postgres", "runtime-tokio", "tls-native-tls", "macros"]}

#serve
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"

#env
dotenvy = "0.15.7"